Hopefully pushed up what can be pulled in

--- a/package.json
+++ b/package.json
@@ -2,17 +2,69 @@
   "name": "@bborman/context-menu",
   "version": "0.0.1",
   "description": "Custom Contect Menu",
-  "repository": "bradenborman/context-menu",
-  "main": "index.js",
-  "scripts": {
-    "clean": "rimraf build/"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bradenborman/context-menu.git"
   },
-  "keywords": ["context-menu"],
+  "main": "lib/",
+  "typings": "lib/",
+  "scripts": {
+    "clean": "rimraf build/",
+    "build": "npm run tsc",
+    "tsc": "tsc"
+  },
+  "keywords": [
+    "context-menu"
+  ],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@babel/polyfill": "^7.7.0",
+    "axios": "^0.19.0",
+    "classnames": "^2.2.5",
+    "cross-env": "^5.2.0",
+    "lodash": "^4.17.15",
+    "prop-types": "^15.6.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "typescript": "^3.7.2"
+  },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@types/classnames": "^2.2.8",
+    "@types/lodash": "^4.14.134",
+    "@types/node": "^12.0.8",
+    "@types/react": "^16.8.21",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.5",
+    "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^3.2.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^3.1.0",
-    "rimraf": "^2.6.2"
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.13.1",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.5.2"
+  },
+  "peerDependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
