--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
+    "outDir": ".",
+    "target": "es5",
     "module": "commonjs",
-    "target": "es6",
-    "outDir": "./lib",
-    "jsx": "react",
-    "sourceMap": true,
+    "moduleResolution": "node",
+    "noImplicitAny": true,
+    "removeComments": true,
     "declaration": true,
-    "declarationDir": "./lib"
+    "jsx": "react",
+    "lib": ["es2015", "dom"]
   },
-  "exclude": ["node_modules", "lib"],
-  "include": ["src/"]
+  "files": ["lib/index.ts"],
+  "exclude": ["node_modules"]
 }
