--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "jsx": "react",
     "lib": ["es2015", "dom"]
   },
-  "files": ["lib/index.ts"],
+  "files": ["src/index.ts"],
   "exclude": ["node_modules"]
 }
